--- a/src/scss/global/variables/variables.scss
+++ b/src/scss/global/variables/variables.scss
@@ -1,13 +1,13 @@
 $blackLight: #131212;
-$blackDark: #201B1B;
-$whiteDark: #F9F9F9;
-$whiteLight: #FFFFFF;
-$grayLight: #E8e8e8;
+$blackDark: #201b1b;
+$whiteDark: #f9f9f9;
+$whiteLight: #ffffff;
+$grayLight: #e8e8e8;
 $grayDark: #d9d9d9;
-$brownLight: #BCA776;
-$orangeLight: #EFAF4F;
-$blueDark: #486EE8;
+$brownLight: #bca776;
+$orangeLight: #c9874d;
+$blueDark: #486ee8;
 $greenDark: #489234;
-$redLight: #D48585;
-$redDark: #A43030;
-$blueLight: #44F8D8;
+$redLight: #d48585;
+$redDark: #a43030;
+$blueLight: #44f8d8;
