--- a/src/scss/componets/infoCard.scss
+++ b/src/scss/componets/infoCard.scss
@@ -88,12 +88,18 @@
           position: absolute;
           height: 0.3rem;
           width: 14rem;
-          background-color: green;
+          background-color: $greenDark;
           top: -0.1rem;
           left: 0;
           @media (min-width: 320px) and (max-width: 1280px) {
             left: 50%;
             transform: translateX(-50%);
+          }
+        }
+
+        &--red {
+          &::before {
+            background-color: $redDark;
           }
         }
       }
@@ -132,9 +138,15 @@
             position: absolute;
             height: 0.3rem;
             width: 2.5rem;
-            background-color: green;
+            background-color: $greenDark;
             top: -0.01rem;
             left: 2.5rem;
+          }
+
+          &--red {
+            &::after {
+              background-color: $redDark;
+            }
           }
         }
       }
