--- a/src/scss/global/typography/typography.scss
+++ b/src/scss/global/typography/typography.scss
@@ -1,5 +1,13 @@
 html {
   font-size: 10px;
+
+  @media all and (max-width: 1366px) {
+    font-size: 8px;
+  }
+
+  @media all and (max-width: 480px) {
+    font-size: 6px;
+  }
 }
 
 h1 {
