--- a/src/scss/componets/contact.scss
+++ b/src/scss/componets/contact.scss
@@ -9,15 +9,36 @@
 	width: 100%;
 	outline: none;
 
+	@media all and (max-width: 980px) {
+		height: auto;
+	}
+
 	&__box {
 		@include flex-justify-align(center, center);
 		@include flex;
 		flex-basis: 80%;
 		padding-top: 20rem;
 		padding-left: 20rem;
+
+		@media all and (max-width: 980px) {
+			padding-left: 0;
+			flex-basis: 50%;
+			flex-wrap: wrap;
+			padding-top: 10rem;
+		}
+
+		@media all and (max-width: 768px) {
+			flex-basis: 65%;
+			padding-top: 5rem;
+		}
+
 		&__form {
 			flex-basis: 50%;
 			justify-content: end;
+			@media all and (max-width: 980px) {
+				flex-basis: 100%;
+				margin-bottom: 10rem;
+			}
 
 			input[type='text'],
 			input[type='tel'],
@@ -31,6 +52,10 @@
 				letter-spacing: 0.5rem;
 				font-size: 4rem;
 				margin-bottom: 2rem;
+
+				@media all and (max-width: 1366px) {
+					font-size: 3rem;
+				}
 			}
 			&__line {
 				display: block;
@@ -83,6 +108,9 @@
 					padding: 1.5rem 2rem;
 					width: 45%;
 					background-color: #d9d9d9;
+					@media all and (max-width: 480px) {
+						width: 100%;
+					}
 				}
 
 				&__lastName {
@@ -90,18 +118,27 @@
 					padding: 1.5rem 2rem;
 					width: 45%;
 					background-color: #d9d9d9;
+					@media all and (max-width: 480px) {
+						width: 100%;
+					}
 				}
 				&__phoneNumber {
 					border: none;
 					padding: 1.5rem 2rem;
 					width: 45%;
 					background-color: #d9d9d9;
+					@media all and (max-width: 480px) {
+						width: 100%;
+					}
 				}
 				&__email {
 					border: none;
 					padding: 1.5rem 2rem;
 					width: 45%;
 					background-color: #d9d9d9;
+					@media all and (max-width: 480px) {
+						width: 100%;
+					}
 				}
 				&__message {
 					border: none;
@@ -113,6 +150,13 @@
 					height: 20rem;
 					padding: 1.5rem;
 					font-family: 'Lato', sans-serif;
+
+					@media all and (max-width: 1366px) {
+						width: 94%;
+					}
+					@media all and (max-width: 480px) {
+						width: 100%;
+					}
 				}
 				&__regulations {
 					@include flex;
@@ -188,6 +232,12 @@
 		&__info {
 			padding-left: 2rem;
 			flex-basis: 50%;
+			@media all and (max-width: 980px) {
+				padding-left: 0rem;
+				flex-basis: 100%;
+				padding-bottom: 10rem;
+			}
+
 			&__city {
 				font-weight: bold;
 				font-size: 2.4rem;
