--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -11,11 +11,23 @@
 			flex-basis: 50%;
 			padding-left: 20rem;
 
+			@media all and (max-width: 1280px) {
+				padding-left: 10rem;
+			}
+
+			@media all and (max-width: 980px) {
+				padding-left: 0;
+			}
+
 			&__title {
 				font-size: 7rem;
 				font-weight: 100;
 				text-transform: uppercase;
 				padding: 2rem 2rem 2rem 10rem;
+
+				@media all and (max-width: 980px) {
+					font-size: 5rem;
+				}
 			}
 
 			&__description {
