--- a/src/scss/componets/infoCard.scss
+++ b/src/scss/componets/infoCard.scss
@@ -5,6 +5,12 @@
   @include flex;
   @include flex-justify-align(center, center);
   height: 100vh;
+
+  @media all and (max-width: 1280px) {
+    height: auto;
+    padding-top: 10rem;
+  }
+
   @media (min-width: 320px) and (max-width: 480px) {
     width: 100%;
   }
@@ -19,6 +25,7 @@
       padding: 0;
       text-align: center;
       flex-basis: 50%;
+      margin-bottom: 10rem;
     }
     @media (min-width: 768px) and (max-width: 1024px) {
       @include flex-wrap;
@@ -42,7 +49,7 @@
       flex-direction: column-reverse;
       padding: 0;
       text-align: center;
-      flex-basis: 50%;
+      flex-basis: 65%;
       margin-top: 5rem;
     }
 
@@ -72,6 +79,10 @@
         font-weight: 100;
         text-transform: uppercase;
         font-size: 4.5rem;
+
+        @media all and (max-width: 1366px) {
+          font-size: 3rem;
+        }
       }
 
       &__line {
@@ -100,6 +111,12 @@
         &--red {
           &::before {
             background-color: $redDark;
+          }
+        }
+
+        &--blue {
+          &::before {
+            background-color: $blueDark;
           }
         }
       }
@@ -148,6 +165,12 @@
               background-color: $redDark;
             }
           }
+
+          &--blue {
+            &::after {
+              background-color: $blueDark;
+            }
+          }
         }
       }
     }
@@ -160,10 +183,18 @@
       @media (min-width: 481px) and (max-width: 767px) {
         margin-bottom: 2rem;
       }
+      @media all and (max-width: 768px) {
+        height: 250px;
+      }
 
       img {
+        @media all and (max-width: 1366px) {
+          width: 80%;
+        }
         @media (min-width: 320px) and (max-width: 767px) {
           width: 100%;
+          height: 100%;
+          object-fit: contain;
         }
       }
     }
@@ -171,6 +202,10 @@
     &--right {
       .infoCard__box__textHolder {
         order: 1;
+
+        @media all and (max-width: 1280px) {
+          order: 0;
+        }
       }
       .infoCard__box__imgHolder {
         display: flex;
