--- a/src/scss/componets/partners.scss
+++ b/src/scss/componets/partners.scss
@@ -8,6 +8,10 @@
         width: 100%;
     }
 
+    @media all and (max-width: 1280px) {
+        height: auto;
+    }
+
     &__box {
         @include flex-justify-align(center, center);
         flex-basis: 80%;
@@ -41,7 +45,7 @@
             flex-direction: column-reverse;
             padding: 0;
             text-align: center;
-            flex-basis: 50%;
+            flex-basis: 65%;
             margin-top: 5rem;
         }
 
@@ -56,6 +60,8 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
+                padding: 0;
+                margin-bottom: 10rem;
             }
 
             h2,
@@ -72,6 +78,10 @@
                 font-weight: 100;
                 text-transform: uppercase;
                 font-size: 4.5rem;
+
+                @media all and (max-width: 1366px) {
+                    font-size: 3rem;
+                }
             }
 
             &__line {
@@ -134,17 +144,46 @@
                 display: flex;
                 flex-wrap: wrap;
                 margin-bottom: 11rem;
+
+                @media all and (max-width: 480px) {
+                    flex-basis: 13rem;
+                    height: 13rem;
+                }
+
+                @media all and (max-width: 320px) {
+                    flex-basis: 15rem;
+                    height: 15rem;
+                    margin: 3rem auto;
+                }
                 
                 &:nth-of-type(2),
                 &:nth-of-type(5) {
                     margin-left: 11rem;
                     margin-right: 11rem;
+
+                    @media all and (max-width: 1366px) {
+                        margin-left: 10%;
+                        margin-right: 10%;
+                    }
+
+                    @media all and (max-width: 480px) {
+                        margin-left: 0;
+                        margin-right: 0;
+                    }
+
+                    @media all and (max-width: 320px) {
+                        margin: 3rem auto;
+                    }
                 }
 
                 &:nth-of-type(4),
                 &:nth-of-type(5),
                 &:nth-of-type(6) {
                     margin-bottom: 0;
+
+                    @media all and (max-width: 320px) {
+                        margin: 3rem auto;
+                    }
                 }
 
                 img {
