--- a/src/scss/componets/slider.scss
+++ b/src/scss/componets/slider.scss
@@ -7,6 +7,11 @@
     overflow: hidden;
     padding: 0 5%;
 
+    @media all and (max-width: 480px) {
+        margin-top: 10rem;
+        height: auto;
+    }
+
     .slick-slider {
         height: 100%;
         display: flex;
@@ -22,7 +27,14 @@
             height: 560px;
             transition: 0.4s;
             padding: 0 20px;
-            // margin: 0 20px;
+
+            @media all and (max-width: 1366px) {
+                height: 400px;
+            }
+
+            @media all and (max-width: 480px) {
+                height: 200px;
+            }
             > div {
                 background-color: #D9D9D9;
                 height: 100%;
@@ -30,6 +42,14 @@
     
             &.slick-center {
                 height: 610px;
+
+                @media all and (max-width: 1366px) {
+                    height: 450px;
+                }
+
+                @media all and (max-width: 480px) {
+                    height: 230px;
+                }
             }
         }
     }
