--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -43,6 +43,7 @@
 				border: 0;
 				background-color: $greenDark;
 				color: $grayLight;
+				outline: 0;
 
 				&--red {
 					background-color: $redDark;
@@ -62,7 +63,8 @@
 					height: 0.1rem;
 					background-color: $grayLight;
 					right: 8%;
-					top: 50%;
+					// top: 50%;
+					top: 30.5px;
 					transform: translateY(-50%);
 
 					&::after {
