--- a/src/scss/componets/infoCard.scss
+++ b/src/scss/componets/infoCard.scss
@@ -137,6 +137,11 @@
         background: transparent;
         display: flex;
         font-size: 1.8rem;
+
+        a {
+          font-size: 1.8rem;
+          text-transform: uppercase;
+        }
         // flex-basis: 30%;
         @media (min-width: 1025px) and (max-width: 1280px) {
 
