--- a/src/scss/componets/partners.scss
+++ b/src/scss/componets/partners.scss
@@ -140,7 +140,7 @@
             &__image {
                 flex-basis: 16rem;
                 height: 16rem;
-                background-color: #D9D9D9;
+                // background-color: #D9D9D9;
                 display: flex;
                 flex-wrap: wrap;
                 margin-bottom: 11rem;
