--- a/src/scss/componets/contact.scss
+++ b/src/scss/componets/contact.scss
@@ -1,6 +1,18 @@
 @import './../global/mixins/flex';
 @import './../global/variables/variables';
 
+::-webkit-input-placeholder {
+	color: #000;
+  }
+  
+  :-ms-input-placeholder {
+	color: #000;
+  }
+  
+  ::placeholder {
+	color: #000;
+  }
+
 .footerContact {
 	@include flex;
 	@include flex-justify-align(center, center);
@@ -45,6 +57,8 @@
 			input[type='email'] {
 				margin: 2rem 2rem 0 0;
 			}
+
+
 
 			&__title {
 				text-transform: uppercase;
