--- a/src/scss/componets/slider.scss
+++ b/src/scss/componets/slider.scss
@@ -26,7 +26,7 @@
             width: 810px;
             height: 560px;
             transition: 0.4s;
-            padding: 0 20px;
+            padding: 0 70px;
 
             @media all and (max-width: 1366px) {
                 height: 400px;
@@ -39,10 +39,22 @@
                 background-color: #D9D9D9;
                 height: 100%;
             }
+
+            .slider-item {
+                width: 100%;
+                height: 100%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
     
             &.slick-center {
                 height: 610px;
-
+                transform: scaleX(1.5);
+                
                 @media all and (max-width: 1366px) {
                     height: 450px;
                 }
