--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -24,9 +24,22 @@
 				font-weight: 100;
 				text-transform: uppercase;
 				padding: 2rem 2rem 2rem 10rem;
+				letter-spacing: 0.5rem;
 
 				@media all and (max-width: 980px) {
 					font-size: 5rem;
+				}
+				.special{
+					font-weight: 400;
+					&--red{
+						color: $redDark;
+					}
+					&--blue{
+						color: $blueDark;
+					}
+					&--green{
+						color: $greenDark;
+					}
 				}
 			}
 
