--- a/src/scss/componets/contact.scss
+++ b/src/scss/componets/contact.scss
@@ -20,6 +20,7 @@
 	height: 100vh;
 	width: 100%;
 	outline: none;
+	background: linear-gradient(0deg, #D9D9D9, #f9f9f9);
 
 	@media all and (max-width: 980px) {
 		height: auto;
@@ -190,6 +191,11 @@
 					display: flex;
 					font-size: 1.8rem;
 					border: 1px solid $greenDark;
+					transition: .4s;
+
+					&:hover {
+						color: #fff;
+					}
 
 					&--red {
 						border: 1px solid $redDark;
@@ -210,8 +216,14 @@
 						background-color: black;
 						margin: 0.8rem 0 0 2rem;
 						position: relative;
+						transition: .4s;
+
+						&:hover {
+							background-color: #fff;
+						}
 
 						&::after {
+							transition: .4s;
 							content: '';
 							position: absolute;
 							height: 0.3rem;
@@ -272,6 +284,44 @@
 		flex-basis: 100%;
 		text-align: center;
 		font-size: 1.4rem;
-		color: #ccc;
+		color: #201B1B;
+	}
+}
+
+
+
+.footerContact__box__form__card__button {
+	transition: .4s;
+	cursor: pointer;
+
+	&:hover {
+		.footerContact__box__form__card__button__line {
+			background-color: #fff;
+		}
+
+		.footerContact__box__form__card__button__line::after {
+			background-color: #fff;
+		}
+	}
+
+	&--green {
+		&:hover {
+			background-color: $greenDark;
+			border-color: $greenDark;
+		}
+	}
+
+	&--red {
+		&:hover {
+			background-color: $redDark;
+			border-color: $redDark;
+		}
+	}
+
+	&--blue {
+		&:hover {
+			background-color: $blueDark;
+			border-color: $blueDark;
+		}
 	}
 }
