--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -19,6 +19,10 @@
 				padding-left: 0;
 			}
 
+			@media all and (max-width: 480px) {
+				text-align: center;
+			}
+
 			&__title {
 				font-size: 7rem;
 				font-weight: 100;
@@ -32,7 +36,7 @@
 
 				@media all and (max-width: 480px) {
 					font-size: 3.5rem;
-					padding: 2rem 2rem 2rem 5rem;
+					padding: 2rem 0;
 				}
 				.special{
 					font-weight: 400;
@@ -52,7 +56,7 @@
 				padding: 2rem 10rem 2rem 10rem;
 
 				@media all and (max-width: 480px) {
-					padding: 2rem 2rem 2rem 5rem;
+					padding: 2rem 0;
 				}
 			}
 
@@ -117,6 +121,10 @@
 		&__imageHolder {
 			clip-path: polygon(24% 0, 100% 0, 100% 100%, 0 100%);
 			flex-basis: 50%;
+
+			@media all and (max-width: 480px) {
+				display: none;
+			}
 
 			img {
 				width: 100%;
