--- a/src/scss/componets/partners.scss
+++ b/src/scss/componets/partners.scss
@@ -13,8 +13,13 @@
     }
 
     &__box {
-        @include flex-justify-align(center, center);
+        display: flex;
+        justify-content: center;
+        align-items: center;
         flex-basis: 80%;
+        width: 50%;
+        // padding-left: 15rem;
+        flex-wrap: wrap;
         // padding-left: 15rem;
         @media (min-width: 1025px) and (max-width: 1280px) {
             @include flex-wrap;
@@ -125,16 +130,25 @@
         }
 
         &__imgHolder {
+            // flex-basis: 50%;
+            // display: flex;
+            // flex-wrap: wrap;
+            // justify-content: space-between;
             flex-basis: 50%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+            width: 50%;
+            height: 400px;
+            position: relative;
 
             @media (min-width: 1025px) and (max-width: 1280px) {
               flex-basis: 100%;
             }
             @media (min-width: 481px) and (max-width: 767px) {
               margin-bottom: 2rem;
+            }
+
+            img {
+                object-fit: contain;
+                height: 400px;
             }
 
             &__image {
