--- a/src/scss/componets/slider.scss
+++ b/src/scss/componets/slider.scss
@@ -22,6 +22,10 @@
         display: flex;
         align-items: center;
 
+        @media all and (max-width: 480px) {
+            height: 300px;
+        }
+
         .slick-slide {
             width: 810px;
             height: 560px;
